--- a/css/styles.css
+++ b/css/styles.css
@@ -1297,7 +1297,7 @@ progress {
   }
   .col-lg-8 {
     flex: 0 0 auto;
-    width: 66.66666667%;
+    width: 90%;
   }
   .col-lg-9 {
     flex: 0 0 auto;
@@ -5381,15 +5381,15 @@ textarea.form-control-lg {
   margin: calc(var(--bs-modal-footer-gap) * 0.5);
 }
 
-@media (min-width: 576px) {
+@media (min-width: 1000px) {
   .modal {
     --bs-modal-margin: 1.75rem;
     --bs-modal-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
   }
   .modal-dialog {
-    max-width: var(--bs-modal-width);
     margin-right: auto;
     margin-left: auto;
+    width: 90%;
   }
   .modal-sm {
     --bs-modal-width: 300px;
@@ -10999,7 +10999,7 @@ html {
   cursor: pointer;
   position: relative;
   display: block;
-  max-width: 25rem;
+  max-width: max-width:100vh;
   border-radius: 0.5rem;
   overflow: hidden;
 }
