--- a/css/styles.css
+++ b/css/styles.css
@@ -1297,7 +1297,7 @@ progress {
   }
   .col-lg-8 {
     flex: 0 0 auto;
-    width: 90%;
+    width: 100%;
   }
   .col-lg-9 {
     flex: 0 0 auto;
@@ -2859,6 +2859,7 @@ textarea.form-control-lg {
   --bs-btn-disabled-color: #fff;
   --bs-btn-disabled-bg: #1abc9c;
   --bs-btn-disabled-border-color: #1abc9c;
+  margin-top: 40px;
 }
 
 .btn-secondary {
@@ -5311,6 +5312,7 @@ textarea.form-control-lg {
   display: flex;
   flex-direction: column;
   width: 100%;
+  height: 300%;
   color: var(--bs-modal-color);
   pointer-events: auto;
   background-color: var(--bs-modal-bg);
@@ -5389,7 +5391,8 @@ textarea.form-control-lg {
   .modal-dialog {
     margin-right: auto;
     margin-left: auto;
-    width: 90%;
+    width: auto;
+    height: auto;
   }
   .modal-sm {
     --bs-modal-width: 300px;
