--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@
   --bs-orange: #fd7e14;
   --bs-yellow: #ffc107;
   --bs-green: #198754;
-  --bs-teal: #1abc9c;
+  --bs-teal: #fdebec;
   --bs-cyan: #0dcaf0;
   --bs-black: #000;
   --bs-white: #fff;
@@ -42,7 +42,7 @@
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
-  --bs-primary-rgb: 26, 188, 156;
+  --bs-primary-rgb: 222, 107, 126;
   --bs-secondary-rgb: 44, 62, 80;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
@@ -640,6 +640,14 @@ progress {
   padding-left: calc(var(--bs-gutter-x) * 0.5);
   margin-right: auto;
   margin-left: auto;
+}
+
+.container2 {
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 2cm;
+  margin-bottom: 2cm;
 }
 
 @media (min-width: 576px) {
@@ -10968,6 +10976,10 @@ html {
   color: #6c757d;
 }
 
+.about {
+  height: 100vh;
+}
+
 .masthead {
   padding-top: calc(6rem + 74px);
   padding-bottom: 6rem;
@@ -10987,6 +10999,7 @@ html {
   .masthead {
     padding-top: calc(6rem + 104px);
     padding-bottom: 6rem;
+    height: 100vh;
   }
   .masthead .masthead-heading {
     font-size: 4rem;
